# fuzzy-rank-ensemble-torch

./: .gitignore  CITATIONS.bib  README.md  pyproject.toml  requirements-build.py
.github/workflows/: python-publish.yml
fuzzy_rank_ensemble_torch/: __init__.py
tests/: test_classification.py
