[project]
name = "fuzzy-rank-ensemble-torch"
version = "0.1.0"
description = "A torch based package for fuzzy rank based ensembles"
authors = [{ name = "Aleksandr Sinitca", email = "amsinitca@etu.ru" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
torch="^2.2.2"
monai = { version = "^1.3", optional = true }

[tool.poetry.extras]
monai = ["monai"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
